--- a/index (1).html
+++ b/index (1).html
@@ -127,11 +127,11 @@
     </div>
     <hr class="align-items-between" style="width: 100%;">
 
-    <section class="d-inline-block p-5 container-fluid text-center">
+    <section class="d-inline-block p-5 container-fluid">
         <div class="w-100">
             <div class="row">
                 <div class="col-lg-4 col-sm-9 pe-5">
-                    <div class="col-lg-12 d-flex">
+                    <div class="col-lg-12 d-flex justify-content-start">
                         <div class="flex-row px-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="-1 -1 1026 1026"
                                 id="Wikimedia-logo_black" y="212">
@@ -152,7 +152,7 @@
                             <a href="#">You can support our work with a donation.</a>
                         </div>
                     </div>
-                    <div class="col-lg-12 d-flex">
+                    <div class="col-lg-12 d-flex justify-content-start">
                         <div class="px-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="-1 -1 86 86"
                                 id="wikipedia_app_tile" y="719">
@@ -252,7 +252,7 @@
                 </div>
                 <div class="row col-8">
                     <div class="col-lg-4 col-md-6 col-sm-8">
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-3">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
                                     viewBox="-306 -517 612 822" id="Commons-logo_sister">
@@ -288,7 +288,7 @@
                                 <p>Freely usable photos & more</p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="-1 -1 302 302"
                                     id="Wikibooks-logo_sister" y="126">
@@ -311,7 +311,7 @@
                                 <p>Free textbooks</p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="43" height="37" viewBox="-1 -1 43 37"
                                     id="Wikiversity-logo_sister" y="409">
@@ -324,7 +324,7 @@
                                 <p>Free course materials</p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="39" viewBox="-1 -1 412 432"
                                     id="Wikisource-logo_sister" y="328">
@@ -367,7 +367,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-8">
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
                                     viewBox="-1 -1 194.5 194.5" id="Wikivoyage-logo_sister" y="446">
@@ -381,7 +381,7 @@
                                 <p>Free travel guide</p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="39" viewBox="-1 -1 412 432"
                                     id="Wikisource-logo_sister" y="328">
@@ -422,7 +422,7 @@
                                 <p>Free new source</p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="42" width="42" viewBox="-1 -1 943 1105"
                                     id="Wikispecies-logo_sister" y="367">
@@ -503,7 +503,7 @@
                                 <p>Free quote compendium</p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="42" width="42" viewBox="-1 -1 943 1105"
                                     id="Wikispecies-logo_sister" y="367">
@@ -586,7 +586,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-8">
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="-1 -1 352 352"
                                     id="Wiktionary-logo_sister" y="482">
@@ -625,7 +625,7 @@
                                 <p>Free dictionary</p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="49" height="49" viewBox="-1 -1 1052 592"
                                     id="Wikidata-logo_sister" y="163">
@@ -642,7 +642,7 @@
                                 <p>Free knoledge base</p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" version="1.1"
                                     id="MediaWiki-logo_sister" viewBox="-1 -1 42 42" y="47">
@@ -816,7 +816,7 @@
                                 <p>Free & open wiki application</p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-start">
                             <div class="flex-row px-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="-1 -1 902 902"
                                     id="Meta-Wiki-logo_sister" y="89">
